--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rosybrown;
+    background: url(53F3E2FB-B498-48F1-9382-A486D5CA714B_1_105_c.jpeg);
 }
 
 .container {
